--- a/src/labs/pm/data/config.properties
+++ b/src/labs/pm/data/config.properties
@@ -1,5 +1,5 @@
 product.data.format={0},{1},{2},{3},{4},{5}
-review.data.format={0},{1},{2}
+review.data.format={0},{1}
 
 reports.folder=/tmp/labs/report
 data.folder=/tmp/labs/data
